[gd_scene load_steps=16 format=3 uid="uid://dpbpiarnq8dd1"]

[ext_resource type="Script" path="res://Bosses/Scripts/ShadowUnlockBoss.gd" id="1_mwcmj"]
[ext_resource type="PackedScene" uid="uid://nhpymmsystt2" path="res://Bullet/Boss_bullet/homing_bullet.tscn" id="2_uo67q"]
[ext_resource type="Texture2D" uid="uid://bna0irko30tcn" path="res://Textures/Boss/oldBossGFX/oldSERPENTARIUS2.png" id="3_lya23"]
[ext_resource type="PackedScene" uid="uid://dwwtn28ag05fi" path="res://UI/HealthBar.tscn" id="4_uo67q"]
[ext_resource type="Texture2D" uid="uid://bbnphfgxxxjn6" path="res://Textures/UI/Main_Menu/Boss_HP_Table.png" id="5_oe4f5"]
[ext_resource type="AudioStream" uid="uid://ywr4cb2khhyc" path="res://Textures/Music/BossOpressorDeath.wav" id="6_etykq"]
[ext_resource type="Texture2D" uid="uid://vww23vh7ph4p" path="res://Textures/Lasers/explosion.png" id="6_ri1nu"]
[ext_resource type="Texture2D" uid="uid://hcsvihieifv7" path="res://Textures/UI/Main_Menu/Boss_HP_Bar_2.png" id="6_xjoeo"]
[ext_resource type="AudioStream" uid="uid://d0hou0ybwsa1p" path="res://Textures/Music/monster_60_attack.wav" id="8_rkkp3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gnr7p"]
size = Vector2(363, 504)

[sub_resource type="Animation" id="Animation_yt7b6"]
resource_name = "Idle"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667, 0.733333, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1.8069, 1.72341), Vector2(1.83448, 1.86823), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.766667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_6f1kc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BossDeathParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8hkoj"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossDeathParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etykq"]
_data = {
"Idle": SubResource("Animation_yt7b6"),
"RESET": SubResource("Animation_6f1kc"),
"death": SubResource("Animation_8hkoj")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rkkp3"]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 3
particles_anim_loop = false

[node name="ShadowUnlockBoss" type="Area2D" groups=["Boss"]]
position = Vector2(-2, -6)
collision_layer = 32
collision_mask = 17
script = ExtResource("1_mwcmj")
max_health = 50000
phase_transition_health = 25000
base_attack_interval_p1 = 3.5
base_attack_interval_p2 = 2.5
projectile_scene = ExtResource("2_uo67q")
move_speed = 500.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-4.00001, -49.8939)
scale = Vector2(2, 2)
texture = ExtResource("3_lya23")
flip_h = true
flip_v = true

[node name="Nozzel" type="Node2D" parent="Sprite2D"]
position = Vector2(-1.01274, 52.9777)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -36)
shape = SubResource("RectangleShape2D_gnr7p")

[node name="AttackTimer" type="Timer" parent="."]

[node name="HealthBar" parent="." instance=ExtResource("4_uo67q")]
offset_left = -322.0
offset_top = -333.0
offset_right = 355.0
offset_bottom = -292.0
texture_under = ExtResource("5_oe4f5")
texture_progress = ExtResource("6_xjoeo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_etykq")
}
autoplay = "Idle"

[node name="BossDeathParticles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rkkp3")
position = Vector2(9, -13)
emitting = false
amount = 500
one_shot = true
explosiveness = 1.0
texture = ExtResource("6_ri1nu")
emission_shape = 1
emission_sphere_radius = 128.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 100.0
anim_speed_min = 0.4
anim_speed_max = 1.0

[node name="BossDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_etykq")
volume_db = 24.0

[node name="PhaseChange" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-269, 21)
stream = ExtResource("8_rkkp3")

[node name="PatternTimer" type="Timer" parent="."]
autostart = true

[node name="AITimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
